<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_200sdp"
        android:background="@drawable/login_bg"></RelativeLayout>


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_100sdp"
        android:layout_marginBottom="@dimen/_80sdp"
        app:cardCornerRadius="@dimen/_2sdp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical"
            android:padding="@dimen/_15sdp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:text="@string/login_title"
                android:textColor="@color/login_bg"
                android:textSize="@dimen/_25sdp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:inputType="textNoSuggestions"
                android:textCursorDrawable="@null"
                android:background="@android:color/transparent"
                android:hint="@string/email"
                android:textColor="@color/login_bg"
                android:textSize="@dimen/_15sdp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_2sdp"
                android:background="@drawable/login_bg" />


            <EditText
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:inputType="textPassword"
                android:textCursorDrawable="@null"
                android:background="@android:color/transparent"
                android:hint="@string/password"
                android:textColor="@color/login_bg"
                android:textSize="@dimen/_15sdp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_2sdp"
                android:background="@drawable/login_bg" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    android:id="@+id/txt_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:gravity="center"
                    android:text="@string/login_title"
                    android:textColor="@color/login_bg"
                    android:textSize="@dimen/_15sdp" />

                <TextView
                    android:id="@+id/txt_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:gravity="center"
                    android:text="@string/signup"
                    android:textColor="@color/login_bg"
                    android:textSize="@dimen/_15sdp" />
            </LinearLayout>


        </LinearLayout>
    </android.support.v7.widget.CardView>

</RelativeLayout>
