<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/login_bg"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/_50sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"

        android:background="@drawable/rounded_corner"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/_5sdp">

            <FrameLayout
                android:layout_width="@dimen/_120sdp"
                android:layout_height="@dimen/_100sdp"
                android:layout_gravity="center"
                android:background="@drawable/fullrounded_corners_loginbg"
                android:gravity="center"
                android:orientation="vertical">


                <ImageView
                    android:id="@+id/profilepic"
                    android:layout_width="@dimen/_90sdp"
                    android:layout_height="@dimen/_90sdp"
                    android:layout_gravity="center"
                    android:background="@drawable/fullrounded_corners_white"
                    android:padding="@dimen/_2sdp"
                    android:scaleType="fitXY" />


                <com.jdbdemo.utils.RoundedImageView
                    android:id="@+id/profilepicdiff"
                    android:layout_width="@dimen/_90sdp"
                    android:layout_height="@dimen/_90sdp"
                    android:layout_gravity="center"
                    android:scaleType="fitXY"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/txtAddPhoto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_horizontal"
                    android:text="Add Photo"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_15sdp"
                    android:visibility="visible" />


            </FrameLayout>
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_10sdp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edit_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@android:color/transparent"
                android:hint="@string/title"
                android:textColor="@color/login_bg"
                android:textCursorDrawable="@null"
                android:textSize="@dimen/_15sdp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_2sdp"
                android:background="@color/black" />

            <EditText
                android:id="@+id/edit_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@android:color/transparent"
                android:hint="@string/category"
                android:textColor="@color/login_bg"
                android:textCursorDrawable="@null"
                android:textSize="@dimen/_15sdp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_2sdp"
                android:background="@color/black" />

            <EditText
                android:id="@+id/edit_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@android:color/transparent"
                android:hint="@string/description"
                android:textColor="@color/login_bg"
                android:textCursorDrawable="@null"
                android:textSize="@dimen/_15sdp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_2sdp"
                android:background="@color/black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:weightSum="2">

                <TextView
                    android:id="@+id/txtRatting"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/ratting"
                    android:textSize="@dimen/_15sdp" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <RatingBar
                        android:id="@+id/rtbHighScore"
                        style="@style/customRatingBar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_20sdp" />


                </RelativeLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/txtDone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_10sdp"
                android:gravity="center"
                android:text="@string/done"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/_15sdp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>
</LinearLayout>