<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/login_bg"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/_50sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"

        android:background="@drawable/rounded_corner"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_190sdp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_20sdp"
            android:scaleType="fitXY"
            android:src="@mipmap/ic_launcher" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_10sdp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edit_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@android:color/transparent"
                android:enabled="false"
                android:gravity="center"
                android:hint="@string/title"
                android:textColor="@color/login_bg"
                android:textCursorDrawable="@null"
                android:textSize="@dimen/_25sdp"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/edit_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@android:color/transparent"
                android:enabled="false"
                android:gravity="center"
                android:hint="@string/category"
                android:textColor="@color/login_bg"
                android:textCursorDrawable="@null"
                android:textSize="@dimen/_18sdp"
                android:textStyle="bold" />


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@android:color/transparent"
                android:hint="@string/description"
                android:textColor="@color/login_bg"
                android:textCursorDrawable="@null"
                android:textSize="@dimen/_15sdp"
                android:visibility="gone" />

            <Button
                android:id="@+id/btn_update"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/_15sdp"
                android:layout_marginLeft="@dimen/_15sdp"
                android:layout_marginRight="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@color/login_bg"
                android:gravity="center"
                android:paddingLeft="@dimen/_15sdp"
                android:paddingRight="@dimen/_15sdp"
                android:text="UPDATE"
                android:textColor="@color/white"
                android:textSize="@dimen/_15sdp"
                android:visibility="gone" />


        </LinearLayout>
    </LinearLayout>
</LinearLayout>